@@ -1,3 +1,9 @@
+*gitlab-shell-3.6.0 (23 Sep 2016)
+
+  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.0.ebuild:
+  dev-vcs/gitlab-shell:  added ebuild for version 3.6.0; dependency of gitlab-
+  ce-8.12.0
+
 *gitlab-shell-3.5.0 (16 Sep 2016)
 
   16 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.5.0.ebuild:
